Notes to modify standard calcite slots, task list to fix code. Remember to comment.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
 </style>
 
 <body>
+    ***********  <!-- 1. Meat pie icon add Github link; 
+                      1a.API Key - add
+                      2. Create Kolache Feature Class from ER diagram
+                      3. NEARBY Search to push in Buckees, Bakeries
+                      4. Consider adding picture option in form (fun)  
+                      
+                      5. QUERY Capability?? How to add
+                      6. EDIT Capability    How to add (outside Survey 123)-->
+
+    <!-- Calcite components -->
   <calcite-loader></calcite-loader>
   <calcite-shell content-behind hidden>
     <calcite-navigation slot="header">
