Made a backup Bucees layer for my work, just in case the other one disappears.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 
 <body>
     <!-- 1. Meat pie icon add Github link; <a href="https://www.flaticon.com/free-icons/protein" title="protein icons">Protein icons created by Freepik - Flaticon</a>
-             1a.API Key - add
-             2. Create Kolache Feature Class from ER diagram
+                a. BUC-EE'S data layer "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Bucee/FeatureServer/0"
+             1b.API Key - add "AAPKb74f725394aa4e348e7e403b02d26f5bCO4U66jjMKSyUPIG1efMlhwXNncMszfx-S7DNYBW0LiXgVNtNJrL9NeJOFxW4e2K"
+             2. Create Kolache Feature Class from ER diagram 
              3. NEARBY Search to push in Buckees, Bakeries
              4. Consider adding picture option in form (fun)  
              5. QUERY Capability?? How to add
@@ -55,7 +56,7 @@
     <calcite-shell content-behind hidden>
         <calcite-navigation slot="header">
             <calcite-navigation-logo id="header-title" heading-level="1" slot="logo">
-                <!-- Dynamically populated -->
+                <!-- Dynamically populated -->  <!-- Name this to xxx-->
             </calcite-navigation-logo>
         </calcite-navigation>
 
