--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
                 a. BUC-EE'S data layer "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Bucee/FeatureServer/0"
              1b.API Key - add "AAPKb74f725394aa4e348e7e403b02d26f5bCO4U66jjMKSyUPIG1efMlhwXNncMszfx-S7DNYBW0LiXgVNtNJrL9NeJOFxW4e2K"
              2. Create Kolache Feature Class from ER diagram 
+             2a. Kolache icon styling
+             3. Change calcite icons & functions
              3. NEARBY Search to push in Buckees, Bakeries
-             4. Consider adding picture option in form (fun)  
+             4. Consider adding user picture option in form (fun)  
              5. QUERY Capability?? How to add
              6. EDIT Capability    How to add (outside Survey 123) -->
 
