--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://js.arcgis.com/calcite-components/2.12.2/calcite.css" />
 
     <script src="https://js.arcgis.com/4.30/"></script>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/dark/main.css" /> //changed 2 zoom buttons to dark 
+    <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/dark/main.css" /> <!--changed 2 zoom buttons to dark -->
 
     <style>
         html,
