Adding Kolache FeatureLayer.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" /> 
+    
     <title>Midterm 576 Initial Calcite Template</title>
-
+    <!-- importing calcite templates-->
     <script src="https://js.arcgis.com/calcite-components/2.12.2/calcite.esm.js" type="module"></script>
     <link rel="stylesheet" href="https://js.arcgis.com/calcite-components/2.12.2/calcite.css" />
-
+    
+    <!-- Importing essential css libraries-->
     <script src="https://js.arcgis.com/4.30/"></script>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/dark/main.css" /> <!--changed 2 zoom buttons to dark -->
+    <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css" /> <!--changed 2 zoom buttons to dark -->
 
     <style>
         html,
@@ -46,6 +48,8 @@
                 a. BUC-EE'S data layer "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Bucee/FeatureServer/0"
              1b.API Key - add "AAPKb74f725394aa4e348e7e403b02d26f5bCO4U66jjMKSyUPIG1efMlhwXNncMszfx-S7DNYBW0LiXgVNtNJrL9NeJOFxW4e2K"
              2. Create Kolache Feature Class from ER diagram 
+                https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Kolache_Locations/FeatureServer
+                **** Need to add ATTACHMENT to allow picture from Survey 123
              2a. Kolache icon styling
              3. Change calcite icons & functions
              3. NEARBY Search to push in Buckees, Bakeries
