--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" /> 
+    <link rel="icon" href="data:,">  <!--remove favicon error in chrome-->
     
     <title>Midterm 576 Initial Calcite Template</title>
     <!-- importing calcite templates-->
