--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- 1. Meat pie icon add Github link; <a href="https://www.flaticon.com/free-icons/protein" title="protein icons">Protein icons created by Freepik - Flaticon</a>
                 a. BUC-EE'S data layer "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Bucee/FeatureServer/0"
              1b.API Key - add "AAPKb74f725394aa4e348e7e403b02d26f5bCO4U66jjMKSyUPIG1efMlhwXNncMszfx-S7DNYBW0LiXgVNtNJrL9NeJOFxW4e2K"
-             2. Create Kolache Feature Class from ER diagram 
+             2. Create Kolache Feature Class created
                 https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Kolache_Locations/FeatureServer
                 **** Need to add ATTACHMENT to allow picture from Survey 123
              2a. Kolache icon styling
@@ -70,6 +70,7 @@
         <calcite-shell-panel slot="panel-start" display-mode="float">
             <calcite-action-bar slot="action-bar">
                 <calcite-action data-action-id="layers" icon="layers" text="Layers"></calcite-action>
+                <calcite-action data-action-id="layers" icon="layers" text="Layers"></calcite-action>
                 <calcite-action data-action-id="basemaps" icon="basemap" text="Basemaps"></calcite-action>
                 <calcite-action data-action-id="legend" icon="legend" text="Legend"></calcite-action>
                 <calcite-action data-action-id="bookmarks" icon="bookmark" text="Bookmarks"></calcite-action>
@@ -78,6 +79,9 @@
             </calcite-action-bar>
 
             <!-- Map-specific panels (each one provides a div for a ArcGIS Maps SDK for JavaScript widget) -->
+            <calcite-panel heading="Layers" height-scale="l" data-panel-id="layers" hidden>
+                <div id="layers-container"></div>
+            </calcite-panel>
             <calcite-panel heading="Layers" height-scale="l" data-panel-id="layers" hidden>
                 <div id="layers-container"></div>
             </calcite-panel>
