--- a/index_CalciteSearchLocate.html
+++ b/index_CalciteSearchLocate.html
@@ -15,10 +15,6 @@
     <script src="https://js.arcgis.com/4.30/"></script>
     <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css" /> <!--changed 2 zoom buttons to dark -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Oriya:wght@400..700&display=swap" rel="stylesheet">
-
     <style>
         html,
         body,
@@ -73,19 +69,18 @@
 
         <calcite-shell-panel slot="panel-start" display-mode="float">
             <calcite-action-bar slot="action-bar">
-                <calcite-action data-action-id="search" icon="search" text="Search"></calcite-action>
                 <calcite-action data-action-id="layers" icon="layers" text="Layers"></calcite-action>
                 <calcite-action data-action-id="basemaps" icon="basemap" text="Basemaps"></calcite-action>
                 <calcite-action data-action-id="legend" icon="legend" text="Legend"></calcite-action>
                 <calcite-action data-action-id="bookmarks" icon="bookmark" text="Bookmarks"></calcite-action>
                 <calcite-action data-action-id="print" icon="print" text="Print"></calcite-action>
                 <calcite-action data-action-id="information" icon="information" text="Information"></calcite-action>
+                <calcite-action data-action-id="search" icon="search" text="Search"></calcite-action>
+                <calcite-action data-action-id="locate" icon="locate" text="Locate"></calcite-action>
             </calcite-action-bar>
 
             <!-- Map-specific panels (each one provides a div for a ArcGIS Maps SDK for JavaScript widget) -->
-            <calcite-panel heading="Search" height-scale="l" data-panel-id="search" hidden>
-                <div id="search-container"></div>
-            </calcite-panel>
+
             <calcite-panel heading="Layers" height-scale="l" data-panel-id="layers" hidden>
                 <div id="layers-container"></div>
             </calcite-panel>
@@ -100,6 +95,12 @@
             </calcite-panel>
             <calcite-panel heading="Print" height-scale="l" data-panel-id="print" hidden>
                 <div id="print-container"></div>
+            </calcite-panel>
+            <calcite-panel heading="Search" height-scale="l" data-panel-id="search" hidden>
+                <div id="search-container"></div>
+            </calcite-panel>
+            <calcite-panel heading="Locate" height-scale="l" data-panel-id="locate" hidden>
+                <div id="locate"></div>
             </calcite-panel>
 
             <!-- Info panel (populates with info from the web map) -->
@@ -172,7 +173,7 @@
             const locate = new Locate({
                 view,
                 container: "locate-container"
-            });
+                });
             const print = new Print({
                 view,
                 container: "print-container"
