--- a/index_broken.html
+++ b/index_broken.html
@@ -15,10 +15,6 @@
     <script src="https://js.arcgis.com/4.30/"></script>
     <link rel="stylesheet" href="https://js.arcgis.com/4.30/esri/themes/light/main.css" /> <!--changed 2 zoom buttons to dark -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Oriya:wght@400..700&display=swap" rel="stylesheet">
-
     <style>
         html,
         body,
@@ -57,6 +53,8 @@
                 **** Need to add ATTACHMENT to allow picture from Survey 123
              2a. Kolache icon styling
              3. Change calcite icons & functions
+
+             ***************** Add Search bar upper right *****************
              3. NEARBY Search to push in Buckees, Bakeries
              4. Consider adding user picture option in form (fun)  
              5. QUERY Capability?? How to add
@@ -73,7 +71,7 @@
 
         <calcite-shell-panel slot="panel-start" display-mode="float">
             <calcite-action-bar slot="action-bar">
-                <calcite-action data-action-id="search" icon="search" text="Search"></calcite-action>
+                <calcite-action data-action-id="information" icon="information" text="Information"></calcite-action>
                 <calcite-action data-action-id="layers" icon="layers" text="Layers"></calcite-action>
                 <calcite-action data-action-id="basemaps" icon="basemap" text="Basemaps"></calcite-action>
                 <calcite-action data-action-id="legend" icon="legend" text="Legend"></calcite-action>
@@ -83,8 +81,8 @@
             </calcite-action-bar>
 
             <!-- Map-specific panels (each one provides a div for a ArcGIS Maps SDK for JavaScript widget) -->
-            <calcite-panel heading="Search" height-scale="l" data-panel-id="search" hidden>
-                <div id="search-container"></div>
+            <calcite-panel heading="Information" height-scale="l" data-panel-id="information" hidden>
+                <div id="layers-container"></div>
             </calcite-panel>
             <calcite-panel heading="Layers" height-scale="l" data-panel-id="layers" hidden>
                 <div id="layers-container"></div>
@@ -125,14 +123,11 @@
         require([
             "esri/WebMap",
             "esri/views/MapView",
-            "esri/widgets/Bookmarks",
             "esri/widgets/BasemapGallery",
             "esri/widgets/LayerList",
             "esri/widgets/Legend",
-            "esri/widgets/Print", 
-            "esri/widgets/Search",
-            "esri/widgets/Locate"
-        ], function (WebMap, MapView, Bookmarks, BasemapGallery, LayerList, Legend, Print, Search, Locate) {
+            "esri/widgets/Search"
+        ], function (WebMap, MapView, BasemapGallery, LayerList, Legend, Search) {
             const webmapId = new URLSearchParams(window.location.search).get("webmap") ?? "bd1fdb61c213433a8c5569f6520d40a3";
             const map = new WebMap({
                 portalItem: {
@@ -151,10 +146,6 @@
                 view,
                 container: "basemaps-container"
             });
-            const bookmarks = new Bookmarks({
-                view,
-                container: "bookmarks-container"
-            });
             const layerList = new LayerList({
                 view,
                 dragEnabled: true,
@@ -165,19 +156,10 @@
                 view,
                 container: "legend-container"
             });
-            const search = new Search({
-                view,
-                container: "search-container"
-            });
-            const locate = new Locate({
-                view,
-                container: "locate-container"
-            });
             const print = new Print({
                 view,
                 container: "print-container"
             });
-
             map.when(() => {
                 const {
                     title,
