--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" /> 
+    <meta name="description" content="UW-Madison Geog 576 Midterm Project" />
+    <meta name="author" content="Sonja Sebree" /> 
     <link rel="icon" href="data:,">  <!--remove favicon error in chrome-->
     
-    <title>Midterm 576 Initial Calcite Template</title>
+    <title>Midterm 576 Project</title>
+
     <!-- importing calcite templates-->
     <script src="https://js.arcgis.com/calcite-components/2.12.2/calcite.esm.js" type="module"></script>
     <link rel="stylesheet" href="https://js.arcgis.com/calcite-components/2.12.2/calcite.css" />
@@ -49,18 +52,16 @@
 </head>
 
 <body>
-    <!-- 1. Meat pie icon add Github link; <a href="https://www.flaticon.com/free-icons/protein" title="protein icons">Protein icons created by Freepik - Flaticon</a>
-                a. BUC-EE'S data layer "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Bucee/FeatureServer/0"
-             1b.API Key - add "AAPKb74f725394aa4e348e7e403b02d26f5bCO4U66jjMKSyUPIG1efMlhwXNncMszfx-S7DNYBW0LiXgVNtNJrL9NeJOFxW4e2K"
-             2. Create Kolache Feature Class created
+
+<!--         1. Kolache Feature Class created
                 https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Kolache_Locations/FeatureServer
-                **** Need to add ATTACHMENT to allow picture from Survey 123
-             2a. Kolache icon styling
+             2. Kolache icon styling
+             2a. Change pointer to a map view, not Webmap application
              3. Change calcite icons & functions
              3. NEARBY Search to push in Buckees, Bakeries
-             4. Consider adding user picture option in form (fun)  
-             5. QUERY Capability?? How to add
-             6. EDIT Capability    How to add (outside Survey 123) -->
+             5. QUERY Capability - Add to calcite menu
+             6. Hook Survey123 to calcite menu
+             7. EDIT Capability    How to add (outside Survey 123) -->
 
     <!-- Calcite components -->
     <calcite-loader></calcite-loader>
