Changed kolache layer to kolache_layer_results layer from Survey 123.

--- a/index.html
+++ b/index.html
@@ -53,15 +53,21 @@
 
 <body>
 
-<!--         1. Kolache Feature Class created
-                https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Kolache_Locations/FeatureServer
-             2. Kolache icon styling
+<!--         1. Kolache Feature Class Kolache_Locator_Results
+                https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/survey123_90dfb79478e54045aa7bf05431f648df_results/FeatureServer
+
+             2. Add Bakery Layer 
+                https://services6.arcgis.com/Do88DoK2xjTUCXd1/arcgis/rest/services/OSM_Shops_NA/FeatureServer
+                
              2a. Change pointer to a map view, not Webmap application
+
              3. Change calcite icons & functions
-             3. NEARBY Search to push in Buckees, Bakeries
+             3. FIND Places -  add upper right corner
+
              5. QUERY Capability - Add to calcite menu
-             6. Hook Survey123 to calcite menu
-             7. EDIT Capability    How to add (outside Survey 123) -->
+             6. Hook Survey123 to calcite menu https://arcg.is/9Pmm9
+
+             7. EDIT interface -->
 
     <!-- Calcite components -->
     <calcite-loader></calcite-loader>
