--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
              2. Add Bakery Layer 
                 https://services6.arcgis.com/Do88DoK2xjTUCXd1/arcgis/rest/services/OSM_Shops_NA/FeatureServer
-                
+
              2a. Change pointer to a map view, not Webmap application
 
              3. Change calcite icons & functions
@@ -80,18 +80,22 @@
 
         <calcite-shell-panel slot="panel-start" display-mode="float">
             <calcite-action-bar slot="action-bar">
-                <calcite-action data-action-id="search" icon="search" text="Search"></calcite-action>
+                <calcite-action data-action-id="information" icon="information" text="Information"></calcite-action>
+                <calcite-action data-action-id="pie" icon="explore" text="Pie"></calcite-action>
                 <calcite-action data-action-id="layers" icon="layers" text="Layers"></calcite-action>
                 <calcite-action data-action-id="basemaps" icon="basemap" text="Basemaps"></calcite-action>
                 <calcite-action data-action-id="legend" icon="legend" text="Legend"></calcite-action>
                 <calcite-action data-action-id="bookmarks" icon="bookmark" text="Bookmarks"></calcite-action>
                 <calcite-action data-action-id="print" icon="print" text="Print"></calcite-action>
-                <calcite-action data-action-id="information" icon="information" text="Information"></calcite-action>
+                <calcite-action data-action-id="search" icon="search" text="Search"></calcite-action>
             </calcite-action-bar>
 
             <!-- Map-specific panels (each one provides a div for a ArcGIS Maps SDK for JavaScript widget) -->
-            <calcite-panel heading="Search" height-scale="l" data-panel-id="search" hidden>
-                <div id="search-container"></div>
+            <calcite-panel heading="Information" height-scale="l" data-panel-id="information" hidden>
+                <div id="information"></div>
+            </calcite-panel>
+            <calcite-panel heading="Pie" height-scale="l" data-panel-id="pie" hidden>
+                <div id="pie"></div>
             </calcite-panel>
             <calcite-panel heading="Layers" height-scale="l" data-panel-id="layers" hidden>
                 <div id="layers-container"></div>
@@ -107,6 +111,9 @@
             </calcite-panel>
             <calcite-panel heading="Print" height-scale="l" data-panel-id="print" hidden>
                 <div id="print-container"></div>
+            </calcite-panel>
+            <calcite-panel heading="Search" height-scale="l" data-panel-id="search" hidden>
+                <div id="search-container"></div>
             </calcite-panel>
 
             <!-- Info panel (populates with info from the web map) -->
