--- a/index._PlainMapCalcite.html
+++ b/index._PlainMapCalcite.html
@@ -42,6 +42,19 @@
       font-family: 'Sixtyfour Convergence', serif;
       font-size: 1.5rem;
     }
+
+    calcite-loader {
+    align-self: center;
+    justify-self: center;
+  }
+
+  #info-content {
+    padding: 0.75rem;
+  }
+
+  calcite-rating {
+    margin-top: 0.25rem;
+  }
   </style>
 
   <body>
